--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -971,14 +971,6 @@ iconify-icon{
   grid-column: span 2 / span 2;
 }
 
-.col-span-3{
-  grid-column: span 3 / span 3;
-}
-
-.col-span-4{
-  grid-column: span 4 / span 4;
-}
-
 .m-0{
   margin: 0px;
 }
@@ -1118,20 +1110,8 @@ iconify-icon{
   height: 100%;
 }
 
-.min-h-16{
-  min-height: 4rem;
-}
-
 .min-h-20{
   min-height: 5rem;
-}
-
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-1\/4{
-  width: 25%;
 }
 
 .w-10{
@@ -1150,28 +1130,12 @@ iconify-icon{
   width: 66.666667%;
 }
 
-.w-2\/5{
-  width: 40%;
-}
-
-.w-4\/12{
-  width: 33.333333%;
-}
-
 .w-4\/6{
   width: 66.666667%;
 }
 
 .w-5{
   width: 1.25rem;
-}
-
-.w-5\/12{
-  width: 41.666667%;
-}
-
-.w-7\/12{
-  width: 58.333333%;
 }
 
 .w-8\/12{
@@ -1190,18 +1154,6 @@ iconify-icon{
 
 .cursor-pointer{
   cursor: pointer;
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.flex-row-reverse{
-  flex-direction: row-reverse;
 }
 
 .flex-col{
@@ -1253,12 +1205,16 @@ iconify-icon{
   row-gap: 2rem;
 }
 
-.overflow-hidden{
-  overflow: hidden;
+.gap-y-32{
+  row-gap: 8rem;
 }
 
-.overflow-x-scroll{
-  overflow-x: scroll;
+.gap-y-16{
+  row-gap: 4rem;
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .rounded-full{
@@ -1423,6 +1379,11 @@ iconify-icon{
   line-height: 1rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-black{
   font-weight: 900;
 }
@@ -1534,10 +1495,6 @@ iconify-icon{
     margin-top: 0px;
   }
 
-  .lg\:mr-4{
-    margin-right: 1rem;
-  }
-
   .lg\:flex{
     display: flex;
   }
@@ -1562,8 +1519,16 @@ iconify-icon{
     width: 50%;
   }
 
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .lg\:w-2\/3{
     width: 66.666667%;
+  }
+
+  .lg\:w-2\/5{
+    width: 40%;
   }
 
   .lg\:w-4\/12{
@@ -1576,14 +1541,6 @@ iconify-icon{
 
   .lg\:w-5\/6{
     width: 83.333333%;
-  }
-
-  .lg\:w-2\/5{
-    width: 40%;
-  }
-
-  .lg\:w-1\/3{
-    width: 33.333333%;
   }
 
   .lg\:scale-100{
@@ -1608,8 +1565,18 @@ iconify-icon{
     gap: 1.5rem;
   }
 
+  .lg\:gap-x-16{
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+
   .lg\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
