--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -1146,6 +1146,22 @@ iconify-icon{
   width: 100%;
 }
 
+.w-3{
+  width: 0.75rem;
+}
+
+.min-w-20{
+  min-width: 5rem;
+}
+
+.min-w-28{
+  min-width: 7rem;
+}
+
+.min-w-40{
+  min-width: 10rem;
+}
+
 .scale-90{
   --tw-scale-x: .9;
   --tw-scale-y: .9;
@@ -1215,6 +1231,10 @@ iconify-icon{
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-x-scroll{
+  overflow-x: scroll;
 }
 
 .rounded-full{
@@ -1495,6 +1515,14 @@ iconify-icon{
     margin-top: 0px;
   }
 
+  .lg\:mt-16{
+    margin-top: 4rem;
+  }
+
+  .lg\:mr-4{
+    margin-right: 1rem;
+  }
+
   .lg\:flex{
     display: flex;
   }
@@ -1543,6 +1571,14 @@ iconify-icon{
     width: 83.333333%;
   }
 
+  .lg\:w-5{
+    width: 1.25rem;
+  }
+
+  .lg\:min-w-0{
+    min-width: 0px;
+  }
+
   .lg\:scale-100{
     --tw-scale-x: 1;
     --tw-scale-y: 1;
@@ -1561,6 +1597,10 @@ iconify-icon{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .lg\:gap-6{
     gap: 1.5rem;
   }
@@ -1568,6 +1608,10 @@ iconify-icon{
   .lg\:gap-x-16{
     -moz-column-gap: 4rem;
          column-gap: 4rem;
+  }
+
+  .lg\:overflow-x-auto{
+    overflow-x: auto;
   }
 
   .lg\:text-sm{
