--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -1097,6 +1097,10 @@ iconify-icon{
   height: 1rem;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
 .h-dvh{
   height: 100dvh;
 }
@@ -1130,28 +1134,20 @@ iconify-icon{
   width: 66.666667%;
 }
 
-.w-4\/6{
-  width: 66.666667%;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
-.w-8\/12{
-  width: 66.666667%;
-}
-
-.w-full{
-  width: 100%;
-}
-
 .w-3{
   width: 0.75rem;
 }
 
-.min-w-20{
-  min-width: 5rem;
+.w-4\/6{
+  width: 66.666667%;
+}
+
+.w-5\/6{
+  width: 83.333333%;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .min-w-28{
@@ -1168,8 +1164,16 @@ iconify-icon{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .cursor-pointer{
   cursor: pointer;
+}
+
+.list-none{
+  list-style-type: none;
 }
 
 .flex-col{
@@ -1213,20 +1217,16 @@ iconify-icon{
        column-gap: 4rem;
 }
 
+.gap-y-16{
+  row-gap: 4rem;
+}
+
 .gap-y-4{
   row-gap: 1rem;
 }
 
 .gap-y-8{
   row-gap: 2rem;
-}
-
-.gap-y-32{
-  row-gap: 8rem;
-}
-
-.gap-y-16{
-  row-gap: 4rem;
 }
 
 .overflow-hidden{
@@ -1399,11 +1399,6 @@ iconify-icon{
   line-height: 1rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .font-black{
   font-weight: 900;
 }
@@ -1481,6 +1476,20 @@ iconify-icon{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
+}
+
+.duration-100{
+  transition-duration: 100ms;
+}
+
 * {
   /*border: 1px solid red;*/
 }
@@ -1511,6 +1520,10 @@ iconify-icon{
     grid-column: span 4 / span 4;
   }
 
+  .lg\:mr-4{
+    margin-right: 1rem;
+  }
+
   .lg\:mt-0{
     margin-top: 0px;
   }
@@ -1519,16 +1532,16 @@ iconify-icon{
     margin-top: 4rem;
   }
 
-  .lg\:mr-4{
-    margin-right: 1rem;
-  }
-
   .lg\:flex{
     display: flex;
   }
 
   .lg\:grid{
     display: grid;
+  }
+
+  .lg\:hidden{
+    display: none;
   }
 
   .lg\:h-dvh{
@@ -1567,12 +1580,16 @@ iconify-icon{
     width: 66.666667%;
   }
 
+  .lg\:w-5{
+    width: 1.25rem;
+  }
+
   .lg\:w-5\/6{
     width: 83.333333%;
   }
 
-  .lg\:w-5{
-    width: 1.25rem;
+  .lg\:w-8\/12{
+    width: 66.666667%;
   }
 
   .lg\:min-w-0{
@@ -1597,10 +1614,6 @@ iconify-icon{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-1{
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
   .lg\:gap-6{
     gap: 1.5rem;
   }
@@ -1614,13 +1627,13 @@ iconify-icon{
     overflow-x: auto;
   }
 
-  .lg\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
   .lg\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .lg\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
