--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -68,7 +68,7 @@
     }
     
     .conteudo {
-        @apply grid gap-y-4 gap-x-8 mx-auto w-5/6 lg:w-10/12 xl:w-8/12
+        @apply grid gap-y-4 gap-x-8 mx-auto w-5/6 xl:w-8/12
     }
     
     .coluna {
