--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -14,7 +14,7 @@ xl	1280px	@media (min-width: 1280px) { ... }
 
 @layer base {
     * {
-        @apply m-0 p-0 box-border border-[0px] border-red-500
+        @apply m-0 p-0 box-border border-[1px] border-red-500
     }
 
     html {
@@ -88,15 +88,15 @@ xl	1280px	@media (min-width: 1280px) { ... }
     }
 
     .nav-link {
-        @apply text-branco inline text-base ml-12 py-2 px-0 border-b-4 border-[rgba(0,0,0,0)] transition-all duration-200 hover:border-verde
+        @apply text-branco inline text-base py-2 px-0 border-b-4 border-[rgba(0,0,0,0)] transition-all duration-200 hover:border-verde
     }
 
     .banner-box {
-        @apply coluna animate-fade-in-right transition-all bg-branco rounded-lg shadow-lg h-full
+        @apply coluna animate-fade-in-right transition-all bg-branco rounded-lg shadow-lg h-full overflow-hidden
     }
 
     .box-titulo {
-        @apply bg-verde px-4 pt-4 pb-0 mb-0
+        @apply bg-verde p-4 mb-0
     }
 
     .dot {
